--- a/MyFirstAzureFunction/MyFirstAzureFunction.Tests/MyFirstAzureFunction.Tests.csproj
+++ b/MyFirstAzureFunction/MyFirstAzureFunction.Tests/MyFirstAzureFunction.Tests.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+        <PackageReference Include="Microsoft.Azure.Functions.Worker" Version="2.0.0-preview1" />
         <PackageReference Include="Microsoft.Azure.WebJobs" Version="3.0.41" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
         <PackageReference Include="Moq" Version="4.20.72" />
